--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,7 @@
 <body>
     <div class="container-fluid">
         <div class="jumbotron text-center", style='background-image: url(http://vignette3.wikia.nocookie.net/gameofthrones/images/4/46/TSITD_The_Wall.png/revision/latest?cb=20150325184700); background-size: cover; background-position-y: center'>
-          <h2>Look up the latest <i>Game of Thrones</i> stories</h2>
-          <p>(From the AV Club, anyway)</p>
+          <h2>The AV Club's latest <i>Game of Thrones</i> stories</h2>
         </div>
         {% for link in links.links %}
         <div class='row text-center'>
